kube-vm/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlytica-chatbot-nodeport
  namespace: kubeflow-user-example-com
spec:
  selector:
    serving.kserve.io/inferenceservice: dlytica-chatbot-ui
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30099  # Unique NodePort for your chatbot
