kube-vm/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: dn-academy-chatbot
  labels:
    app: postgres
spec:
  replicas: 1  # You can adjust based on your needs
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: quay.io/datanature_dev/postgres:12   
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dn-academy-chatbot
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30148  
  selector:
    app: postgres
