kube-vm/chatbot_deployment.yaml
# Namespace Definition
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: dn-academy-chatbot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: dn-academy-chatbot
  labels:
    app: postgres
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: quay.io/datanature_dev/postgres:12   
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dn-academy-chatbot 
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30147
  selector:
    app: postgres
---
 
# Deployment for FastAPI Chatbot
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlytica-chatbot-ui
  namespace: dn-academy-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dlytica-chatbot-ui
  template:
    metadata:
      labels:
        app: dlytica-chatbot-ui
    spec:
      containers:
      - name: fastapi-container
        image: quay.io/datanature_dev/chatbot/academy_bot:academy_chatbot_4
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1"
        # Add liveness and readiness probes
        # livenessProbe:
        #   httpGet:
        #     path: /health  # Replace with your FastAPI health check endpoint
        #     port: 8000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        # readinessProbe:
        #   httpGet:
        #     path: /health  # Replace with your FastAPI health check endpoint
        #     port: 8000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        # Optional: Enable debug logging
      imagePullSecrets:
        - name: quay-secret
---
 
# Service for FastAPI Chatbot
apiVersion: v1
kind: Service
metadata:
  name: dlytica-chatbot-service
  namespace: dn-academy-chatbot
spec:
  selector:
    app: dlytica-chatbot-ui
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 31270
---
 
# Ingress for External Access with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dlytica-chatbot-ingress
  namespace: dn-academy-chatbot
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      nginx.ingress.kubernetes.io/rewrite-target: /
      cert-manager.io/issue-temporary-certificate: "true"
      acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chatbotv3.data-nature.dlytica.com
      secretName: dlytica-chatbot-tls-certificate1
  rules:
    - host: chatbotv3.data-nature.dlytica.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dlytica-chatbot-service
                port:
                  number: 80
