kube-vm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dlytica-chatbot-ingress
  namespace: kubeflow-user-example-com
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Extended timeout settings
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "7200"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    # nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    # Improved buffer settings
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
    # Keep-alive settings
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "600"
    nginx.ingress.kubernetes.io/keep-alive: "75"
    nginx.ingress.kubernetes.io/keep-alive-requests: "100"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - chatbot.data-nature.dlytica.com
    secretName: dlytica-chatbot-tls-secret
  rules:
  - host: chatbot.data-nature.dlytica.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dlytica-chatbot-nodeport
            port:
              number: 80
